# bss-cli

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DATA_MODEL.md  DECISIONS.md  Makefile  README.md  ROADMAP.md  TOOL_SURFACE.md  backfill_loyalty_customers.py  docker-compose.e2e.yml  docker-compose.rust.yml  docker-compose.yml  seed_targeted_campaign.py
crates/bss-admin/: Cargo.toml
crates/bss-admin/src/: reset.rs
crates/bss-clients/: Cargo.toml
crates/bss-clients/src/: admin.rs  audit.rs  auth.rs  crm.rs  inventory.rs  payment.rs
crates/bss-clients/tests/: base.rs
crates/bss-clock/: Cargo.toml
crates/bss-clock/src/: clock.rs
crates/bss-clock/tests/: clock.rs
crates/bss-models/: Cargo.toml
crates/bss-models/src/: lib.rs
crates/bss-portal-auth/: Cargo.toml
crates/bss-portal-auth/src/: audit.rs  email.rs  lib.rs  pending_action.rs  service.rs  startup.rs  tokens.rs  types.rs
crates/bss-portal-auth/tests/: audit_link_live.rs  login_flow_live.rs  service_live.rs
crates/bss-webhooks/: Cargo.toml
crates/bss-webhooks/src/: redaction.rs  signatures.rs
crates/bss-webhooks/tests/: golden_test.rs  webhooks_golden.json
rust/: .dockerignore  Cargo.toml  README.md
rust/cli/: Cargo.toml
rust/cli/src/: jaeger.rs  main.rs  repl.rs  repl_ui.rs  runtime.rs
rust/cli/src/commands/: admin.rs  admin_knowledge.rs  admin_seed.rs  ask.rs  branding.rs  case.rs  catalog.rs  clock.rs  customer.rs  inventory.rs  mod.rs  order.rs  payment.rs  promo.rs  scenario.rs  subscription.rs  trace.rs  usage.rs
rust/cli/src/scenarios/: actions.rs  context.rs  file_step.rs  llm_executor.rs  mod.rs  reporting.rs  runner.rs  schema.rs
rust/conformance/: Cargo.toml
rust/conformance/src/: main.rs
rust/crates/bss-admin/src/: lib.rs
rust/crates/bss-branding/: Cargo.toml
rust/crates/bss-branding/src/: config.rs  css.rs  lib.rs  themes.rs
rust/crates/bss-clients/: Cargo.toml
rust/crates/bss-clients/src/: admin.rs  base.rs  catalog.rs  com.rs  crm.rs  errors.rs  inventory.rs  jaeger.rs  lib.rs  loyalty.rs  mediation.rs  payment.rs  provisioning.rs  som.rs  subscription.rs
rust/crates/bss-clock/src/: clock.rs  lib.rs  router.rs
rust/crates/bss-clock/tests/: clock.rs
rust/crates/bss-cockpit/: Cargo.toml
rust/crates/bss-cockpit/src/: bubble.rs  chrome_filter.rs  config.rs  default_operator.md  default_settings.toml  lib.rs  postprocess.rs  prompts.rs
rust/crates/bss-cockpit/tests/: renderer_golden.rs
rust/crates/bss-context/: Cargo.toml
rust/crates/bss-context/src/: ctx.rs  layer.rs  lib.rs
rust/crates/bss-context/tests/: context.rs
rust/crates/bss-db/: Cargo.toml
rust/crates/bss-db/src/: lib.rs  policy.rs
rust/crates/bss-events/: Cargo.toml
rust/crates/bss-events/src/: consumer.rs  event.rs  lib.rs  mq.rs  relay.rs  router.rs
rust/crates/bss-events/tests/: events.rs
rust/crates/bss-knowledge/: Cargo.toml
rust/crates/bss-knowledge/src/: lib.rs  search.rs
rust/crates/bss-knowledge/tests/: live_smoke.rs
rust/crates/bss-middleware/: Cargo.toml
rust/crates/bss-middleware/src/: layer.rs  lib.rs  otel.rs  token_map.rs
rust/crates/bss-middleware/tests/: golden_vectors.json
rust/crates/bss-models/src/: lib.rs
rust/crates/bss-orchestrator/: Cargo.toml
rust/crates/bss-orchestrator/src/: agent.rs  chat_caps.rs  chat_model.rs  config.rs  events.rs  lib.rs  ownership.rs  prompts.rs  registry.rs
rust/crates/bss-orchestrator/tests/: agent_loop.rs  case_ticket_writes_live.rs  catalog_tools_live.rs  crm_reads_live.rs  mine_wrappers_live.rs  order_payment_writes_live.rs  payment_tools_live.rs  promo_catalog_usage_writes_live.rs  subscription_tools_live.rs  subscription_writes_live.rs  tool_descriptions.rs
rust/crates/bss-portal-auth/: Cargo.toml
rust/crates/bss-portal-auth/src/: config.rs  email.rs  email_change.rs  lib.rs  service.rs
rust/crates/bss-portal-auth/tests/: audit_link_live.rs  startup_test.rs  stepup_live.rs
rust/crates/bss-portal-ui/: Cargo.toml
rust/crates/bss-portal-ui/tests/: golden_test.rs
rust/crates/bss-telemetry/: Cargo.toml
rust/crates/bss-telemetry/src/: bootstrap.rs  healthcheck.rs  lib.rs  propagation.rs  redaction.rs
rust/crates/bss-webhooks/src/: idempotency.rs  lib.rs
rust/migrations/: 0001_baseline.sql
rust/portals/csr/: Cargo.toml  Dockerfile
rust/portals/csr/src/: bubble.rs  catalog.rs  clients.rs  cockpit.rs  customers.rs  guards.rs  handoff.rs  inflight.rs  lib.rs  main.rs  orders.rs  routes.rs  sessions.rs  settings.rs  templating.rs  tool_row.rs  turn.rs  views.rs
rust/portals/csr/tests/: routes_crm.rs
rust/portals/self-serve/: Cargo.toml  Dockerfile
rust/portals/self-serve/src/: account_reads.rs  account_writes.rs  auth.rs  clients.rs  config.rs  dashboard.rs  deps.rs  lib.rs  main.rs  middleware.rs  offerings.rs  payment_methods.rs  profile.rs  (+6 more)
rust/services/catalog/: Dockerfile
rust/services/com/: Cargo.toml  Dockerfile
rust/services/crm/: Cargo.toml  Dockerfile
rust/services/mediation/: Cargo.toml  Dockerfile
rust/services/payment/: Cargo.toml  Dockerfile
rust/services/provisioning-sim/: Dockerfile
rust/services/rating/: Cargo.toml  Dockerfile
rust/services/som/: Dockerfile
rust/services/subscription/: Dockerfile
services/catalog/: Cargo.toml  Dockerfile  pyproject.toml
services/catalog/bss_catalog/: app.py  promotion_repository.py  promotion_service.py
services/catalog/src/: lib.rs  repo.rs  services.rs
services/catalog/tests/: live_smoke.rs  test_active_queries.py  test_promotion_routes.py  test_promotion_service.py
services/provisioning-sim/: Cargo.toml  Dockerfile
services/provisioning-sim/src/: consumer.rs  error.rs  repo.rs  state.rs
services/provisioning-sim/tests/: live_smoke.rs
services/som/: Cargo.toml
services/som/src/: config.rs  error.rs  events.rs  repo.rs  routes.rs
services/som/tests/: live_smoke.rs  test_task_completion_locking.py
services/subscription/: Cargo.toml
services/subscription/src/: routes.rs  schemas.rs  service.rs
services/subscription/tests/: live_smoke.rs  test_renewal_worker.py
(+593 files in other folders)
