[package]
name = "bss-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared model types + BSS_RELEASE (single source of truth). Per-table FromRow structs land with each service (P1–P4)."

[lints]
workspace = true

# Deps land as tables do: sqlx (FromRow), chrono, rust_decimal, uuid arrive with
# the first per-service model module (P1). Intentionally empty for now.
[dependencies]
