[package]
name = "catalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Catalog service (Phase 3). TMF620 read surface + admin writes + the v1.1 promotion subsystem (two-system saga over external loyalty-cli). Port of services/catalog."

[lints]
workspace = true

[lib]
name = "catalog"
path = "src/lib.rs"

[[bin]]
name = "catalog"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }

bss-clock = { workspace = true }
bss-context = { workspace = true }
bss-db = { workspace = true }
bss-middleware = { workspace = true }
bss-telemetry = { workspace = true }
bss-clients = { workspace = true }
bss-models = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
