[package]
name = "provisioning-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Provisioning simulator (Phase 2). Consumes provisioning.task.created, runs the fault-injecting worker (fail_always/fail_first_attempt/slow/stuck) + eSIM SM-DP+ seam, emits provisioning.task.{completed,failed,stuck}. Port of services/provisioning-sim."

[lints]
workspace = true

[lib]
name = "provisioning_sim"
path = "src/lib.rs"

[[bin]]
name = "provisioning-sim"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
lapin = { workspace = true }

bss-admin = { workspace = true }
bss-clock = { workspace = true }
bss-context = { workspace = true }
bss-db = { workspace = true }
bss-middleware = { workspace = true }
bss-events = { workspace = true }
bss-telemetry = { workspace = true }
bss-models = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
