[package]
name = "som"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Service Order Management (Phase 2). Decomposes order.in_progress into ServiceOrder→CFS→RFS + atomic MSISDN/eSIM reservation, drives provisioning task events to service_order.completed. Runs the outbox relay + safe (retry/park) consumers. Port of services/som."

[lints]
workspace = true

[lib]
name = "som"
path = "src/lib.rs"

[[bin]]
name = "som"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
lapin = { workspace = true }

bss-admin = { workspace = true }
bss-clock = { workspace = true }
bss-context = { workspace = true }
bss-db = { workspace = true }
bss-middleware = { workspace = true }
bss-events = { workspace = true }
bss-telemetry = { workspace = true }
bss-clients = { workspace = true }
bss-models = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
