[package]
name = "bss-context"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Per-request context (actor/tenant/channel/service-identity/request-id) + task-local scope + axum propagation layer. Port of the auth_context ContextVars."

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
