[package]
name = "bss-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DB pool + the PolicyViolation error (typed, IntoResponse). Port of the services' policies/base + engine setup."

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
