[package]
name = "bss-middleware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Perimeter token auth: TokenMap (HMAC-hashed, constant-time) + axum layer. Port of packages/bss-middleware."

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
bss-context = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
