[package]
name = "bss-orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "LLM orchestrator — hand-rolled ReAct loop over the BSS tool surface, safety/autonomy gating, AgentEvent stream, and the deterministic MockChatModel fixture player. Rust port of orchestrator/bss_orchestrator (linked in-process by the P6/P7 portals + CLI)."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }

bss-clock = { workspace = true }
bss-clients = { workspace = true }
bss-knowledge = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
bss-db = { workspace = true }
