[package]
name = "bss-portal-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Shared UI rendering for BSS-CLI portals. Rust port of packages/bss-portal-ui — chat-bubble HTML (customer chat v0.12 + operator cockpit v0.13) + SSE frame helpers. The agent-log projection + static/template bundling land with the P6b portal consumer."

[lints]
workspace = true

[lib]
name = "bss_portal_ui"
path = "src/lib.rs"

[dependencies]
fancy-regex = { workspace = true }

bss-cockpit = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
