[package]
name = "payment"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Payment service (Phase 4). TMF676 payment + paymentMethod, the tokenizer seam (mock + Stripe via direct reqwest, Decision D4), idempotency-keyed charges, and the Stripe webhook receiver (reconcile / drift / record-only). Port of services/payment."

[lints]
workspace = true

[lib]
name = "payment"
path = "src/lib.rs"

[[bin]]
name = "payment"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }

bss-admin = { workspace = true }
bss-clock = { workspace = true }
bss-context = { workspace = true }
bss-db = { workspace = true }
bss-middleware = { workspace = true }
bss-telemetry = { workspace = true }
bss-events = { workspace = true }
bss-clients = { workspace = true }
bss-models = { workspace = true }

[dev-dependencies]
